[gd_scene load_steps=15 format=3 uid="uid://b8wrls8mbvp8i"]

[ext_resource type="Theme" uid="uid://dljh7gpbntv8f" path="res://ui/global_theme.tres" id="1_pkt7u"]
[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_vad6r"]
[ext_resource type="Texture2D" uid="uid://mvxm7mjirlpf" path="res://game_objects/enemies/enemy_00.png" id="3_08eo4"]
[ext_resource type="Script" path="res://ui/hud/tower_button.gd" id="3_q8wr8"]
[ext_resource type="Resource" uid="uid://7voeqhthrrmn" path="res://game_objects/towers/laser/laser_tower.tres" id="4_6f0sp"]
[ext_resource type="Resource" uid="uid://bderd3qgjtoq" path="res://game_objects/towers/pulse/pulse_tower.tres" id="5_0vkf1"]
[ext_resource type="Resource" uid="uid://dsyxqm4ckg5oy" path="res://game_objects/towers/gamma/gamma_tower.tres" id="6_41mfy"]
[ext_resource type="Resource" uid="uid://cng5hjf2visvo" path="res://game_objects/towers/railgun/railgun_tower.tres" id="6_85qpw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pt5df"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7av2e"]
bg_color = Color(0.161251, 0.00601538, 0.00132007, 1)

[sub_resource type="Gradient" id="Gradient_g72e2"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q840n"]
gradient = SubResource("Gradient_g72e2")
width = 8
height = 8

[sub_resource type="LabelSettings" id="LabelSettings_u2ceh"]
line_spacing = 0.0
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3ow0"]
bg_color = Color(1, 1, 1, 0.286275)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vad6r")

[node name="MainHUD" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Blank" type="Panel" parent="MainHUD"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pt5df")

[node name="HBar" type="Panel" parent="MainHUD"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7av2e")

[node name="MarginContainer" type="MarginContainer" parent="MainHUD/HBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainHUD/HBar/MarginContainer"]
layout_mode = 2

[node name="MoneyLivesLabel" type="RichTextLabel" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/line_separation = 0
bbcode_enabled = true
text = "[color=feda84]$ -99[/color]
[color=ff9b83]C -99[/color]"
scroll_active = false
autowrap_mode = 0

[node name="VSeparator" type="VSeparator" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 2

[node name="LaserTowerButton" type="TextureButton" parent="MainHUD/HBar/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
script = ExtResource("3_q8wr8")
tower_stats = ExtResource("4_6f0sp")

[node name="PulseTowerButton" type="TextureButton" parent="MainHUD/HBar/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_08eo4")
script = ExtResource("3_q8wr8")
tower_stats = ExtResource("5_0vkf1")

[node name="RailgunTowerButton" type="TextureButton" parent="MainHUD/HBar/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_q840n")
script = ExtResource("3_q8wr8")
tower_stats = ExtResource("6_85qpw")

[node name="GammaTower" type="TextureButton" parent="MainHUD/HBar/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
script = ExtResource("3_q8wr8")
tower_stats = ExtResource("6_41mfy")

[node name="VSeparator2" type="VSeparator" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Tooltip" type="Label" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_pkt7u")
text = "woah
$999"
label_settings = SubResource("LabelSettings_u2ceh")
horizontal_alignment = 1

[node name="WaveButton" type="Button" parent="MainHUD/HBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "2 >>"

[node name="YouDied" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="YouDied"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -16.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center][color=ff0000]YOU DIED[/color][/center]"

[node name="YouWin" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m3ow0")

[node name="VBoxContainer" type="VBoxContainer" parent="YouWin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -22.0
offset_right = 50.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="YouWin/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center][color=00ff00]YOU WIN[/color][/center]"
fit_content = true

[node name="ResetButton" type="Button" parent="YouWin/VBoxContainer"]
layout_mode = 2
text = "Back to Title"

[connection signal="pressed" from="MainHUD/HBar/MarginContainer/HBoxContainer/WaveButton" to="." method="_on_wave_button_pressed"]
[connection signal="pressed" from="YouWin/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
